frontend/js/maps.css
:root {
  --marker-border-color: #fff;
  --marker-arrow-color: #000;
}

.dark-mode {
  --marker-border-color: #000;
  --marker-arrow-color: #fff;
}

.maplibregl-marker {
  cursor: pointer;
}

.vehicle-marker {
  width: 24px;
  height: 16px;
  background: #fff;
  border: 1px solid var(--marker-border-color);
  /*  border-left-color: var(--marker-arrow-color);*/
  margin: 1px;
  text-align: center;
  overflow: hidden;
  line-height: 16px;
  color: #000;
  text-anchor: middle;
  paint-order: stroke;
  stroke-width: 2px;
  display: block; /* cos svg is not block-level by default */
}

.vehicle-marker.white-text {
  color: #fff;
}

.maplibregl-marker:hover .vehicle-marker,
.vehicle-marker.selected {
  outline: 1px solid var(--marker-arrow-color); /* inverse of --marker-border-color */
}

.maplibregl-user-location-dot,
.maplibregl-user-location-accuracy-circle {
  pointer-events: none;
}

.arrow {
  border: 4px solid transparent;
  border-right: 5px solid var(--marker-arrow-color);
  border-left: 0;
  left: -5px;
  position: absolute;
  top: 6px;
}

.right + .arrow {
  border-left: 5px solid var(--marker-arrow-color);
  border-right: 0;
  left: auto;
  right: -5px;
}

.maplibregl-popup {
  z-index: 1;
}

body .maplibregl-popup-content {
  border-radius: 6px;
}

.maplibregl-popup-content svg {
  vertical-align: middle;
}

.maplibregl-popup-content a {
  display: block;
}

a.link-with-smalls {
  text-decoration: none;
}

a.link-with-smalls:hover .description {
  text-decoration: underline;
}

.link-with-smalls .smalls {
  color: var(--text-color);
  font-size: 0.85em;
}

/* !!!!!!!  */

body .maplibregl-map {
  font-family: inherit;
  color: #222;
}

body .maplibregl-popup-content {
  background: var(--background-color);
  color: var(--text-color);
  line-height: 1.5;
  padding: 10px;
}

body .maplibregl-popup-anchor-top .maplibregl-popup-tip {
  border-bottom-color: var(--background-color);
}

body .maplibregl-popup-anchor-top-left .maplibregl-popup-tip {
  border-bottom-color: var(--background-color);
}

body .maplibregl-popup-anchor-top-right .maplibregl-popup-tip {
  border-bottom-color: var(--background-color);
}

body .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
  border-top-color: var(--background-color);
}

body .maplibregl-popup-anchor-bottom-left .maplibregl-popup-tip {
  border-top-color: var(--background-color);
}

body .maplibregl-popup-anchor-bottom-right .maplibregl-popup-tip {
  border-top-color: var(--background-color);
}

body .maplibregl-popup-anchor-left .maplibregl-popup-tip {
  border-right-color: var(--background-color);
}

body .maplibregl-popup-anchor-right .maplibregl-popup-tip {
  border-left-color: var(--background-color);
}

.map-status-bar {
  background-color: hsla(0, 0%, 100%, 0.5);
  color: rgba(0, 0, 0, 0.75);
  display: inline-block;
  padding: 5px 8px;
  position: absolute;
  z-index: 2;
}

.map-button {
  cursor: pointer;
  margin: 10px;
  font: inherit;
  font-size: 14px;
  padding: 5px 7px;
  color: #222;
  background: #fff;
  border-radius: 4px;
  border: 0;
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
  position: absolute;
  z-index: 2;
}

.map-button:hover {
  background-color: #f2f2f2;
}

body .maplibregl-popup-close-button {
  color: var(--text-color);
  padding: 0.25em 0.5em;
  border-radius: 0 6px 0 0;
}

.map-style-switcher summary {
  background-image: url("data-url:../svg/layers.svg");
  width: 29px;
  height: 29px;
  overflow: hidden;
  margin-left: auto;
  text-indent: 100%;
  white-space: nowrap;
  list-style: none;
}

body.dark-mode .maplibregl-ctrl-group {
  background: var(--background-color);
  color: var(--text-color);
  box-shadow: 0 0 0 2px #fff5;
}

.dark-mode .map-style-switcher summary,
.dark-mode .maplibregl-ctrl-icon {
  filter: invert(100%);
}

.map-style-switcher summary:hover {
  background-color: #0000000d;
}

.map-style-switcher label {
  display: block;
  padding: 0 3px;
}

.map-style-switcher input {
  margin-left: 0;
}

.big-map .maplibregl-ctrl-bottom-right {
  bottom: 100px;
}

